function creation/script/func1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: func1
  namespace: function
spec:
  selector:
    function: func1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
